Change and fix behaviors when file in project is delete or moved(renamed).

--- a/GIP/Controls/DockFormProjectFileView.resx
+++ b/GIP/Controls/DockFormProjectFileView.resx
@@ -117,6 +117,69 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="NodeIconImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>190, 17</value>
+  </metadata>
+  <data name="NodeIconImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABW
+        DAAAAk1TRnQBSQFMAgEBBgEAARgBAAEYAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wMADfQDAA30IwAB9AsU
+        AfQDAAH0BBQB6gHzAeMDIAHjAfQB/yIAAfQBFAn0ARQB9AEAAv8B9AETBPQB4wEgARcBIAEXASAB4wH0
+        IgAB9AEUCfQBFAH0AQAC/wH0ARQE9AEgARcB/wGUAf8BFwEgAfQiAAH0ARQB9AcUAfQBFAH0AQAC/wH0
+        ARQB9AMUAiABlAH/AZQCIAEaIgAB9AEUCfQBFAH0AQAC/wH0ARQE9AEgARcB/wGUAf8BFwEgAfQiAAH0
+        ARQB9AcUAfQBFAH0AQAC/wH0ARQB9AMUAeMBIAEXASABFwEgAeMB9CIAAfQBFAn0ARQB9AEAAv8B9AEU
+        AfME9AHjAyAB4wH0Af8iAAH0ARQB9AcUAfQBFAH0AQAC/wH0ARQB8wcUAfQBFAH0IwAB9AEUCfQBFAH0
+        AwAB9AEUCfQBFAH0IwAB9AEUAfQDFAH0BRQB9AMAAfQBFAH0AxQB9AUUAfQjAAH0ARQF9AEUAvQBBwET
+        AfQDAAH0ARQF9AEUAvQBBwETAfQjAAH0ARQF9AEUAfQBBwETAfAB9AMAAfQBFAX0ARQB9AEHARMB8AH0
+        IwAB9AEUBfQBFAEHARMB8AH0BAAB9AEUBfQBFAEHARMB8AH0JAAB9AcUARMB8AH0BQAB9AcUARMB8AH0
+        JQAK9AYACvQkAAr0BgAK9B4AAf8F9AH/AQAB9AgUCPQGFAHqAfMB4wMgAeMC9BcAAf8B9AHjAyAB4wH0
+        Af8B9AEUBvQBFAH0BRQC9AEUBvQB4wEgARcBIAEXASAB4w/0Af8BAAj0AeMBIAEXASABFwEgAeMC9AEU
+        AfQEFAH0ARQF9AEUAvQBFAH0BBQB9AEgARcB/wGUAf8BFwEgAvQCmQp5ARoB9AEAAfQGeQEbASABFwH/
+        AZQB/wEXASAC9AEUBvQBFAX0ARQC9AEUBvQCIAGUAf8BlAIgAvQBeQEaCnkBmQH0AQAB9AZ5ARsCIAGU
+        Af8BlAIgARoB9AEUAfQEFAH0ARQF9AEUAvQBFAH0BBQB9AEgARcB/wGUAf8BFwEgAvQBeQHzC3kBGwL0
+        BnkBGwEgARcB/wGUAf8BFwEgAvQBFAb0ARQF9AEUAvQBFAb0AeMBIAEXASABFwEgAeMC9AF5AfQBmQp5
+        ARoC9AZ5AZkB4wEgARcBIAEXASAB4wL0ARQB9AIUAfQCFAHsBfQBFAL0ARQB9AIUAfQCFAHsAeMDIAHj
+        ARQC9AF5AfQBGgp5AZkC9Ad5ARoB4wMgAeMB9AH/AfQBFAT0ARQB7Ab0ARQC9AEUBPQBFAHsBvQBFAL0
+        AXkL9AF5A/QIeQGZAxsBmQH0AQAB9AUUAewH9AEUAvQFFAHsB/QBFAL0AXkL9AF5A/QNeQH0AQAO9AEU
+        D/QBFAL0AXkL9AF5AfQBAAH0DXkB9AEAAfQOFAL0DhQC9AF5BvQBGgR5AZkB9AEAAfQNeQH0AQAB9A4U
+        AvQOFAL0AXkG9AGZARoF9AEAAfQBeQb0ARsBmQX0AQAB9A4UAvQOFAH0AfMBmQZ5AZkE9AH/AgAB8wh5
+        ARoB9AUAKvQGAAr0Af8mAAH/B/QB/xYAAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYA
+        A/8BAAHAAQEBwAEBBAABwAEBAcAFAAHAAQEGAAHAAQEGAAHAAQEGAAHAAQEGAAHAAQEGAAHAAQEGAAHA
+        AQEBAAEBBAABwAEBAcABAQQAAcABAQHAAQEEAAHAAQEBwAEBBAABwAEBAcABAQQAAcABAwHAAQMEAAHA
+        AQcBwAEHBAABwAEPAcABDwUAAT8BAAE/A/8BAQQAAv8B/gYAAQEHAAEBBwABASEAAQEHAAEBBQABAQEA
+        AQEFAAEBAQABAQUAAQEBAAEBBQABAwEAAR8FAAE/AQABHwT/AYABPwL/Cw==
+</value>
+  </data>
   <metadata name="MenuTreeNodePopup.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
